Revision history for Dist-Zilla-Plugin-CheckExtraTests

{{$NEXT}}

0.018     2014-02-18 17:20:58-05:00 America/New_York

    [Fixed]

    - CheckExtraTest now force removes temp directory, the way
      Path::Class used to do.

0.017     2014-02-13 15:03:55-05:00 America/New_York

    [Changed]

    - Removed dependency on Path::Class in favor of Path::Tiny

0.016     2013-11-15 11:33:06 America/New_York

    [Changed]

    - the 'xtest' command now accepts the same options as 'test' does

0.015     2013-10-31 15:03:13 America/New_York

    - Shipping as a stable release

0.014     2013-10-23 19:52:43 America/New_York

    [Fixed]

    - [CheckExtraTest] tests in a .build directory instead of the build
      directory

    - the 'xtest' command now uses Dist::Zilla methods to build a temporary
      directory, which also sets the .build/latest symlink correctly

0.013     2013-10-17 17:26:26 America/New_York

    [Changed]

    - [RunExtraTests] now runs xt/author ahead of xt/smoke and xt/release
      (Karen Etheridge)

0.012     2013-10-15 23:15:02 America/New_York

    [Changed]

    - 'dzil xtest' arguments now match as regex patterns for more
      flexibility

    [Fixed]

    - use all builders to build, not just the first (Karen Etheridge)

0.011     2013-02-09 20:53:59 America/New_York

    - Doc fixes (ETHER)

    - Path::Tiny fix (ETHER)

0.010     2013-02-07 23:09:15 America/New_York

    - Bump Dist::Zilla prereq to something modernish

0.009     2013-02-06 16:15:30 America/New_York

    - Swap Path::Class for Path::Tiny and Path::Class::Rule
      for Path::Iterator::Rule

0.008     2013-01-25 15:23:15 America/New_York

    - lazy loading of some dependencies (DOLMEN)

0.007     2012-05-31 12:00:29 America/New_York

    - change RunExtraTests plugin to avoid rebuilding the dist when
      it's not necessary (e.g. MakeMaker already ran the normal tests)
      (thanks, Christopher J. Madsen)

0.006     2012-05-10 23:08:11 America/New_York
