@@ -2,6 +2,10 @@ Revision history for Dist-Zilla-Plugin-CheckExtraTests
 
 {{$NEXT}}
 
+    [Changed]
+
+    - Added 'jobs' argument for 'dzil xtest' for parallel testing
+
 0.018     2014-02-18 17:20:58-05:00 America/New_York
 
     [Fixed]
